# seurantabotti

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.py  coverage.json  lcov.info  main.py  pyproject.toml  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml
clients/: eduskunta.py  kuluttajaliitto.py  lausuntopalvelu.py
context/: kuluttajaliitto.json
delivery/: email.py
docs/: seurantabotti-initial-doc.md  seurantabotti-technical-spec.md  seurantabotti-vaatimusmaarittely.md
processing/: document_parser.py  llm_scorer.py
scripts/: check.sh  check_coverage_thresholds.py
state/: nostetut.json  score_log.jsonl  seen_proposals.json
tests/: conftest.py  test_eduskunta_client.py  test_email.py  test_kuluttajaliitto.py  test_lausuntopalvelu.py  test_lausuntopalvelu_contract.py  test_lausuntopalvelu_feed.py  test_llm_scorer.py  test_main_cli.py  test_main_commands.py  test_main_daily_distribution.py  test_main_daily_jakelu.py  test_main_edges.py  test_main_mutation_guards.py  test_main_weekly.py  test_runtime_regressions.py
tests/fixtures/eduskunta/: talousvaliokunta.html  tave_40_2026_vp.xml
tests/fixtures/lausuntopalvelu/: proposals_feed.xml  proposals_feed_expected.json
