[project]
name = "seurantabotti"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
sprint4 = [
    "pymupdf>=1.24",
    "python-docx>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "B", "PL", "UP"]
ignore = [
    "E501",    # line too long — HTML templates make this unavoidable
    "PLR2004", # magic-value-comparison — noisy for test assertions and score checks
]

[tool.coverage.run]
branch = true
