[project]
name = "seurantabotti"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "anthropic>=0.96.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "B", "PL", "UP"]
ignore = [
    "E501",    # line too long — HTML templates make this unavoidable
    "PLR2004", # magic-value-comparison — noisy for test assertions and score checks
]

[tool.coverage.run]
branch = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["main.py", "config.py", "clients", "delivery", "processing"]
exclude = ["tests"]
reportMissingTypeStubs = false

