[project]
name = "seurantabotti"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "anthropic>=0.96.0",
    "python-dotenv>=1.2.2",
    "resend>=2.29.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.124.0",
    "mutmut>=3.3.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "B", "PL", "UP"]
ignore = [
    "E501",    # line too long — HTML templates make this unavoidable
    "PLR2004", # magic-value-comparison — noisy for test assertions and score checks
]

[tool.coverage.run]
branch = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["main.py", "config.py", "clients", "delivery", "processing", "tests", "scripts"]
exclude = ["**/__pycache__", "**/.*", ".venv", "mutants", "**/node_modules"]
reportMissingTypeStubs = false
strict = ["processing"]

[tool.mutmut]
paths_to_mutate = ["main.py", "processing/llm_scorer.py"]
also_copy = ["clients", "delivery", "config.py", "processing"]
tests_dir = ["tests"]
runner = "uv run --extra dev pytest -q"
do_not_mutate = [
    "if __name__ == \"__main__\":"
]

